# DBSDK-Rust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
samples/draw-triangles/: Cargo.toml
samples/draw-triangles/src/: lib.rs
samples/font-display/: Cargo.toml
samples/font-display/src/: gamefont.rs  lib.rs
samples/ktx-textures/: Cargo.toml
samples/ktx-textures/content/: brickTex.ktx
samples/ktx-textures/src/: lib.rs
samples/model-loading/: Cargo.toml
samples/model-loading/content/: cube.dbm  eyelidmat.KTX  eyemat.KTX  leigh.dbm  leigh_atk1.dba  leigh_atk2.dba  leigh_atk3.dba  leigh_default.dba  leigh_fall.dba  leigh_idle.dba  leigh_idlebattle.dba  leigh_jump.dba  leigh_jumpatk.dba  leigh_run.dba  leigh_runsword.dba  leighmat.KTX
samples/model-loading/src/: dbanim.rs  dbmesh.rs  lib.rs  sh.rs
samples/qoi-textures/: Cargo.toml
samples/qoi-textures/content/: brickTex.qoi
samples/qoi-textures/src/: lib.rs
samples/roq-video/: Cargo.toml
samples/roq-video/src/: lib.rs  roq_player.rs
samples/sound-effects/: Cargo.toml
samples/sound-effects/src/: lib.rs
scripts/Blender/: untitled.dbm
scripts/Blender/dbmesh_export/: dbexport.py
src/: audio.rs  clock.rs  db.rs  db_internal.rs  gamepad.rs  io.rs  lib.rs  math.rs  sounddriver.rs  vdp.rs
