[package]
name = "dbsdk-rs"
version = "0.1.11"
edition = "2021"
authors = [ "Hazel Stagner" ]
description = "API for creating Rust games for the DreamBox fantasy console"
license = "MIT"
readme = "README.md"
repository = "https://github.com/GlaireDaggers/DBSDK-Rust"
keywords = ["gamedev", "fantasy-console"]
categories = ["wasm", "game-development", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
field-offset = "0.3.4"
bitmask = "0.5.0"
byteorder = "1.4.3"